Rework most classes

--- a/classes/bard.html
+++ b/classes/bard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-23 Fri 12:31 -->
+<!-- 2024-03-01 Fri 15:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bard</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5b7a816">1. Proficiencies</a></li>
-<li><a href="#org72ef9f8">2. Level-up</a></li>
+<li><a href="#org1df4e03">1. Proficiencies</a></li>
+<li><a href="#org52bfb2c">2. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -225,9 +225,8 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <li><span class="underline">Spell attack bonus</span>: PROF + INT</li>
 <li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
 </ul>
-
-<div id="outline-container-org5b7a816" class="outline-2">
-<h2 id="org5b7a816"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org1df4e03" class="outline-2">
+<h2 id="org1df4e03"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -250,7 +249,7 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <tr>
 <td class="org-left">Light armor</td>
 <td class="org-left">Daggers</td>
-<td class="org-left">3 musical instruments of your choice</td>
+<td class="org-left">1 musical instrument of your choice</td>
 </tr>
 
 <tr>
@@ -272,33 +271,36 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 </tr>
 </tbody>
 </table>
-</div>
-</div>
 
-<div id="outline-container-org72ef9f8" class="outline-2">
-<h2 id="org72ef9f8"><span class="section-number-2">2.</span> Level-up</h2>
+<p>
+Health Transfer increases to 20 health.
+</p>
+</div>
+</div>
+<div id="outline-container-org52bfb2c" class="outline-2">
+<h2 id="org52bfb2c"><span class="section-number-2">2.</span> Level-up</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>Gain <span class="underline"><b>Life Force Manipulation</b></span>. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary. Gain one subclass ability.</li>
-<li>Gain a subclass ability.</li>
-<li>Your Intelligence and Wisdom scores both increase by 1.</li>
 <li>Gain <span class="underline"><b>Health Transfer</b></span>. Twice per combat, you may transfer up to 10 health from yourself to an ally.</li>
+<li>Your Intelligence and Wisdom scores bothss increase by 1.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>Your Charisma is increased by +1. Gain one subclass ability.</li>
 <li>Life Force Manipulation’s strength increases to 1d10.</li>
 <li>Gain <span class="underline"><b>Transmutation</b></span>. Learn about one of the following damage types of your choosing (Ice, Fire, Radiance, Energy, Force, Psychic). Once per round of combat, during an ally’s turn, you can change their damage dealt into damage of this type and add an additional 1d6 of this damage type.</li>
-<li>Your Strength and Constitution scores both increase by 1.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>Gain a subclass ability.</li>
 <li>Gain <span class="underline"><b>Bard Buff</b></span>. Once per combat, grant one of your allies the ability to use a bard action for the rest of combat. You can choose from your learned bard actions.</li>
-<li>_*Life Force Manipulation*_’s strength increases to 2d8. Gain a subclass ability</li>
-<li>Health Transfer’s strength increases to 20 health.</li>
-<li>Learn Upgraded Transmutation - gain one more damage type, and when applying transmutation, the damage increases to 2d6.</li>
-<li>Gain +1 of Any. Gain 1d6 health.</li>
-<li>Subclass Feature.</li>
+<li><span class="underline"><b>Life Force Manipulation&rsquo;s</b></span> strength increases to 2d8. Gain a subclass ability</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Learn <span class="underline"><b>Upgraded Transmutation</b></span> - gain one more damage type, and when applying transmutation, the damage increases to 2d6.</li>
+<li>Health Transfer increases to 20 health.</li>
+<li>Gain a subclass ability</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>You may now use Bard Buff twice per combat. Gain 1d6 health.</li>
 <li>Life Force Manipulation’s strength increases to 2d12.</li>
-<li>Gain +1 of Any and an additional +1 of Any (must be a different Ability Score than the first +1). Gain 1d6 health.</li>
-<li>Gain a subclass ability.</li>
-<li>Multiclass</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Multiclasss</li>
 </ol>
 <hr />
 </div>
@@ -307,7 +309,7 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2024-02-23 Fri 12:31</p>
+<p class="date">Created: 2024-03-01 Fri 15:22</p>
 </div>
 </body>
 </html>
