--- a/classes/druid.html
+++ b/classes/druid.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-20 Sun 17:23 -->
+<!-- 2024-03-01 Fri 15:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Druid</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbe9fb23">1. Proficiencies</a></li>
-<li><a href="#orgd2367bf">2. Level-up</a></li>
+<li><a href="#org0a9fb77">1. Proficiencies</a></li>
+<li><a href="#org47ef84d">2. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -218,19 +218,19 @@ Whether calling on the forces of nature, or emulating the creatures of the world
 </p>
 
 <p>
-To start as a Druid, choose a domain of nature to integrate with: [Plant, Animal, Stone, Cosmos]. Each domain offers the wielder a few distinct advantages right away. All Druids can learn druid cantrips and druids can learn druid spells through their Druid Circle.
+To start as a Druid, choose a domain of nature to integrate with: [Plant, Animal, Stone, Cosmic]. Each domain offers the wielder a few distinct advantages right away. All Druids can learn druid cantrips and druids can learn druid spells through their Druid Circle.
 </p>
 
 <ul class="org-ul">
-<li><span class="underline">Initial Health</span>: Roll a 1d8 and add it to your base HP. This is your Hit Die (HD). You will add the amount your rol lto your base health every time your level up.</li>
+<li><span class="underline">Initial Health</span>: Roll a 1d8 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
 <li>Spells are cast using WIS + PROF (Wisdom modifier + Proficiency modifier)</li>
 </ul>
 
 <p>
 Learn <b>Druidic</b>: A secret language of Druids that allow them to speak in secret to other Druids, and hear whispers from nature around them.
 </p>
-<div id="outline-container-orgbe9fb23" class="outline-2">
-<h2 id="orgbe9fb23"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org0a9fb77" class="outline-2">
+<h2 id="org0a9fb77"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -289,11 +289,11 @@ Learn <b>Druidic</b>: A secret language of Druids that allow them to speak in se
 </table>
 </div>
 </div>
-<div id="outline-container-orgd2367bf" class="outline-2">
-<h2 id="orgd2367bf"><span class="section-number-2">2.</span> Level-up</h2>
+<div id="outline-container-org47ef84d" class="outline-2">
+<h2 id="org47ef84d"><span class="section-number-2">2.</span> Level-up</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
-<li>Learn Druid Alchemy and unlock latent abilities. Learn 1 <a href="../guides/spell-index.html#ID-b32b2d16-0b71-4af9-9464-b5575f720a99">Druid Cantrip</a> <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></li>
+<li>Learn Druid Alchemy and unlock latent abilities. Learn 1 Druid Cantrip<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></li>
 <li><p>
 Add 1d6 to your max HP. Enter a Druid Circle. Groups of druids pool their powers together to unlock a deeper connection with nature and themselves. This allows Druids to tap into the combined power of their circle to unlock new powers and abilities. Join one of the following:
 </p>
@@ -345,7 +345,7 @@ Glossary: <a href="../glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">can
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-20 Sun 17:23</p>
+<p class="date">Created: 2024-03-01 Fri 15:23</p>
 </div>
 </body>
 </html>
