--- a/classes/paladin.html
+++ b/classes/paladin.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-23 Fri 13:41 -->
+<!-- 2024-03-01 Fri 16:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Paladin</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbd95369">1. Proficiencies</a></li>
-<li><a href="#org405afea">2. Level-up</a></li>
+<li><a href="#org279f0b9">1. Proficiencies</a></li>
+<li><a href="#orgacef0b6">2. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -214,15 +214,14 @@
 </div>
 <hr />
 <p>
-Defend the faith and the faithful with the might of your god. Whether sworn before a god&rsquo;s alter in a pristine temple, or in a moment of desperation and grief, a paladin&rsquo;s oath is a powerful bond. Uses heavy weapons and some spellcasting using WIS, CHA, and a holy symbol. To start as a paladin, first choose a subclass: [<a href="subclasses/holy-knight.html#ID-60eb64e5-82ae-42d0-9b3f-e0a662fda360">Holy Knight</a>, <a href="subclasses/void-priest.html#ID-df760c35-e021-4db3-ba72-4bf457d937fd">Void Priest</a>, <a href="subclasses/missionary.html#ID-5afcd93c-8342-4bb3-968c-1d7124b9d93d">Missionary</a>]
+Defend the faith and the faithful with the might of your god. Whether sworn into service before a god&rsquo;s alter in a pristine temple, or in a moment of desperation and grief, a paladin&rsquo;s oath is a powerful bond. Uses heavy weapons and some spellcasting using WIS, CHA, and a holy symbol. To start as a paladin, first choose a subclass: [<a href="subclasses/holy-knight.html#ID-60eb64e5-82ae-42d0-9b3f-e0a662fda360">Holy Knight</a>, <a href="subclasses/void-priest.html#ID-df760c35-e021-4db3-ba72-4bf457d937fd">Void Priest</a>, <a href="subclasses/missionary.html#ID-5afcd93c-8342-4bb3-968c-1d7124b9d93d">Missionary</a>]. Be sure you apply your level 1 bonuses from your subclass and pick 1 trait from your subclass to apply to your character. Make sure to review the <a href="../guides/spell-index.html#ID-7521a020-4fd2-4b75-9e24-5aa4c2fb69e3">Spell Index</a> for a full list of applicable spells Paladin&rsquo;s can learn.
 </p>
 
 <ul class="org-ul">
 <li><span class="underline">Initial Health</span>: Roll a 1d10 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
 </ul>
-
-<div id="outline-container-orgbd95369" class="outline-2">
-<h2 id="orgbd95369"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org279f0b9" class="outline-2">
+<h2 id="org279f0b9"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -275,8 +274,8 @@ Defend the faith and the faithful with the might of your god. Whether sworn befo
 </table>
 </div>
 </div>
-<div id="outline-container-org405afea" class="outline-2">
-<h2 id="org405afea"><span class="section-number-2">2.</span> Level-up</h2>
+<div id="outline-container-orgacef0b6" class="outline-2">
+<h2 id="orgacef0b6"><span class="section-number-2">2.</span> Level-up</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li><p>
@@ -294,7 +293,8 @@ Also gain <span class="underline">Divine Sense</span>. The presence of strong ev
 <li>Unarmed Fighting (UA). Your unarmed strikes can deal bludgeoning damage equal to 1d6 + your Strength modifier. If you strike with two free hands, the d6 becomes a d8. When you successfully start a grapple, you can deal 1d4 bludgeoning damage to the grappled creature. Until the grapple ends, you can also deal this damage to the creature whenever you hit it with a melee attack.</li>
 </ul></li>
 <li>Gain <span class="underline">Divine Smite</span>: When you hit a creature with a melee weapon attack, you can expend one spell slot to deal Radiant damage to the target in addition to the weapon&rsquo;s regular damage. The extra damage is 2d8 for a 1st-level spell slot, plus 1d8 for each spell level higher than 1st, to a max of 5d8. The damage increases by 1d8 if the target is undead.</li>
-<li>Gain +1 to any. Gain one subclass ability. Become proficient in an additional class of weapon.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Gain one subclass ability. Become proficient in an additional class of weapon.</li>
 <li>Gain a subclass ability. Gain +1 INT and +1 CHA</li>
 </ol>
 
@@ -309,7 +309,7 @@ Also gain <span class="underline">Divine Sense</span>. The presence of strong ev
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-09 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2024-02-23 Fri 13:41</p>
+<p class="date">Created: 2024-03-01 Fri 16:02</p>
 </div>
 </body>
 </html>
