--- a/classes/subclasses/chaos_sorcerer.html
+++ b/classes/subclasses/chaos_sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-17 Thu 17:44 -->
+<!-- 2024-03-01 Fri 16:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chaos Sorcerer</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org44dc8bd">1. Sorcery Traits:</a></li>
-<li><a href="#orgcfdd726">2. Level 1 Sorceries:</a></li>
-<li><a href="#org5dba5ac">3. Level 2 Sorceries (5+):</a></li>
-<li><a href="#orgea3e5f2">4. Level 3 Sorceries (11+):</a></li>
-<li><a href="#orgd6aec23">5. Level 4 Sorceries (16+):</a></li>
+<li><a href="#org24f36bd">1. Sorcery Traits:</a></li>
+<li><a href="#orgf3541ae">2. Level 1 Sorceries:</a></li>
+<li><a href="#org4e35f63">3. Level 2 Sorceries (5+):</a></li>
+<li><a href="#org284f18b">4. Level 3 Sorceries (11+):</a></li>
+<li><a href="#orgf5cfe07">5. Level 4 Sorceries (16+):</a></li>
 </ul>
 </div>
 </div>
@@ -219,19 +219,18 @@
 <p>
 Chaos sorcerers rearrange the past to confound enemies, but often rely on situational context to unleash their full potential.
 </p>
-
-<div id="outline-container-org44dc8bd" class="outline-2">
-<h2 id="org44dc8bd"><span class="section-number-2">1.</span> Sorcery Traits:</h2>
+<div id="outline-container-org24f36bd" class="outline-2">
+<h2 id="org24f36bd"><span class="section-number-2">1.</span> Sorcery Traits:</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><i>Chaotic Struggle</i>: Any damage you deal to Lawful enemies is increased by 50%.</li>
-<li><i>Rule Breaker</i>: Regardless of your actions within the campaign, you will be considered a Chaotic creature for the rest of the game by everyone you encounter, including the gods. Your deception modifier is permanently +2.</li>
-<li><i>Annoyance</i>: Once per long rest, become able to ask for an insight into what will frustrate one NPC of your choosing the most. Gain +3 on rolls pertaining to that action.</li>
+<li><span class="underline"><i>Chaotic Struggle</i></span>: Any damage you deal to Lawful enemies is increased by 50%.</li>
+<li><span class="underline"><i>Rule Breaker</i></span>: Regardless of your actions within the campaign, you will be considered a Chaotic creature for the rest of the game by everyone you encounter, including the gods. Your deception modifier is permanently +2.</li>
+<li><span class="underline"><i>Annoyance</i></span>: Once per long rest, become able to ask for an insight into what will frustrate one NPC of your choosing the most. Gain +3 on rolls pertaining to that action.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcfdd726" class="outline-2">
-<h2 id="orgcfdd726"><span class="section-number-2">2.</span> Level 1 Sorceries:</h2>
+<div id="outline-container-orgf3541ae" class="outline-2">
+<h2 id="orgf3541ae"><span class="section-number-2">2.</span> Level 1 Sorceries:</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline">Reversion</span>: Move all targets within a 20-foot radius to the location they were in the previous turn. This location can be more than 20-feet away from the caster. <i>You cannot send targets back to other realms with this spell.</i></li>
@@ -240,8 +239,8 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
 </ul>
 </div>
 </div>
-<div id="outline-container-org5dba5ac" class="outline-2">
-<h2 id="org5dba5ac"><span class="section-number-2">3.</span> Level 2 Sorceries (5+):</h2>
+<div id="outline-container-org4e35f63" class="outline-2">
+<h2 id="org4e35f63"><span class="section-number-2">3.</span> Level 2 Sorceries (5+):</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline">Retroactive Omen</span>: Learn what type of damage a target is vulnerable to. The last three attacks from your allies were now of that damage type. Adjust the target&rsquo;s health accordingly</li>
@@ -250,8 +249,8 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
 </ul>
 </div>
 </div>
-<div id="outline-container-orgea3e5f2" class="outline-2">
-<h2 id="orgea3e5f2"><span class="section-number-2">4.</span> Level 3 Sorceries (11+):</h2>
+<div id="outline-container-org284f18b" class="outline-2">
+<h2 id="org284f18b"><span class="section-number-2">4.</span> Level 3 Sorceries (11+):</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline">Lingering Wound</span>: Roll to a hit a target within 30-feet of the caster. On hit, all damage an enemy has previously taken increases by 50%. Ex: If they have taken 10 damage, they take an additional 5 damage</li>
@@ -259,8 +258,8 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd6aec23" class="outline-2">
-<h2 id="orgd6aec23"><span class="section-number-2">5.</span> Level 4 Sorceries (16+):</h2>
+<div id="outline-container-orgf5cfe07" class="outline-2">
+<h2 id="orgf5cfe07"><span class="section-number-2">5.</span> Level 4 Sorceries (16+):</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline">Back to the Future</span>: Permanently alter some aspect of the past. This spell has two charges, <i>you must return to a Temple of Chaos to regain charges</i>. You must work with the DM to decide how powerful this spell is, but you may change the circumstances of your present to include
@@ -269,7 +268,7 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
 <li>The death of any enemy that you reasonably could have defeated in combat</li>
 <li>The prevention of a minor/medium mistake you made</li>
 </ul></li>
-<li><span class="underline">Variety!</span>: On hit, deal 12d8 damage - 1d8 of each of the twelve types of damage</li>
+<li><span class="underline">Variety!</span>: On hit, deal 10d8 damage - 1d8 of each of the twelve types of damage</li>
 </ul>
 </div>
 </div>
@@ -277,7 +276,7 @@ Chaos sorcerers rearrange the past to confound enemies, but often rely on situat
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-17 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-17 Thu 17:44</p>
+<p class="date">Created: 2024-03-01 Fri 16:12</p>
 </div>
 </body>
 </html>
