--- a/classes/subclasses/craftsman.html
+++ b/classes/subclasses/craftsman.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:28 -->
+<!-- 2024-03-01 Fri 15:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Craftsman</title>
@@ -202,70 +202,64 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3ce1aa4">1. Level 1</a></li>
-<li><a href="#org1a2c9f1">2. Level 2</a></li>
-<li><a href="#org1a126c6">3. Level 5</a></li>
-<li><a href="#org90c3d3b">4. Level 10</a></li>
-<li><a href="#org5a4c0c2">5. Level 15</a></li>
-<li><a href="#org02b4396">6. Level 19</a></li>
+<li><a href="#org23e190d">1. Level 1</a></li>
+<li><a href="#org126a034">2. Level 2</a></li>
+<li><a href="#orgadf8ccc">3. Level 5</a></li>
+<li><a href="#org59cd11d">4. Level 10</a></li>
+<li><a href="#org888b738">5. Level 15</a></li>
+<li><a href="#orgc338a39">6. Level 19</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../../dnd.html#ID-DND">Main Menu</a>] [<a href="../classes.html#ID-campaign-classes">Character Selection</a>] [<a href="../classes.html#ID-campaign-classes">Classes</a>] [<a href="../bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a>]
+[<a href="../../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="../classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>] [<a href="../bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a>]
 </p>
 </div>
 <hr />
-<div id="outline-container-org3ce1aa4" class="outline-2">
-<h2 id="org3ce1aa4"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-org23e190d" class="outline-2">
+<h2 id="org23e190d"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
-<p>
-Gain <span class="underline">Resourcefulness</span>: You can use the materials around you to build something of your choosing within the following limits
-</p>
+<ul class="org-ul">
+<li>Gain <span class="underline">Resourcefulness</span>: You can use the materials around you to build something of your choosing within the following limits
 <ul class="org-ul">
 <li>The object cannot be overly technical (no computers, basic circuitry)</li>
 <li>The materials cannot be unreasonably dangerous or difficult to move/transport/carry</li>
 <li>You must have tools to build it</li>
-<li>THe object must be used for utility and non-aesthetic purposes.</li>
+<li>The object must be used for utility and non-aesthetic purposes.</li>
+</ul></li>
+<li>You gain an additional toolkit and an additional action in combat when using a tool</li>
 </ul>
-
-<p>
-You gain an additional toolkit
-</p>
 </div>
 </div>
-<div id="outline-container-org1a2c9f1" class="outline-2">
-<h2 id="org1a2c9f1"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-org126a034" class="outline-2">
+<h2 id="org126a034"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
-<p>
-Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.
-</p>
+<ul class="org-ul">
+<li>Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org1a126c6" class="outline-2">
-<h2 id="org1a126c6"><span class="section-number-2">3.</span> Level 5</h2>
+<div id="outline-container-orgadf8ccc" class="outline-2">
+<h2 id="orgadf8ccc"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
-<p>
-Gain <span class="underline">Architect</span>: You are now an architect. You can build a safe shelter around you and your allies once per long rest that keeps you hidden (within reason) from enemies around you and will protect against significant attacks. The shelter does require some time to build, either a few minutes, or a single combat turn.
-</p>
-
-<p>
-You gain a5
-</p>
+<ul class="org-ul">
+<li>Gain <span class="underline">Architect</span>: You are now an architect. You can build a safe shelter around you and your allies once per long rest that keeps you hidden (within reason) from enemies around you and will protect against significant attacks. The shelter does require some time to build, either a few minutes, or a single combat turn.</li>
+<li>You gain a5</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org90c3d3b" class="outline-2">
-<h2 id="org90c3d3b"><span class="section-number-2">4.</span> Level 10</h2>
+<div id="outline-container-org59cd11d" class="outline-2">
+<h2 id="org59cd11d"><span class="section-number-2">4.</span> Level 10</h2>
 </div>
-<div id="outline-container-org5a4c0c2" class="outline-2">
-<h2 id="org5a4c0c2"><span class="section-number-2">5.</span> Level 15</h2>
+<div id="outline-container-org888b738" class="outline-2">
+<h2 id="org888b738"><span class="section-number-2">5.</span> Level 15</h2>
 </div>
-<div id="outline-container-org02b4396" class="outline-2">
-<h2 id="org02b4396"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-orgc338a39" class="outline-2">
+<h2 id="orgc338a39"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <p>
-Become able to craft a <span class="underline"><b>Forgotten Object</b></span>: Upon breaking the forgotten object, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
+Become able to craft a <span class="underline"><b>Lost Trinket</b></span>: Upon breaking the Lost Trinket, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
 </p>
 <hr />
 </div>
@@ -274,7 +268,7 @@ Become able to craft a <span class="underline"><b>Forgotten Object</b></span>: U
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:28</p>
+<p class="date">Created: 2024-03-01 Fri 15:22</p>
 </div>
 </body>
 </html>
