--- a/classes/subclasses/missionary.html
+++ b/classes/subclasses/missionary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 15:25 -->
+<!-- 2024-03-01 Fri 16:00 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Missionary</title>
@@ -202,12 +202,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbf22e8a">1. Level 1</a></li>
-<li><a href="#org307ec95">2. Level 2</a></li>
-<li><a href="#org2785ef1">3. Level 5</a></li>
-<li><a href="#org58dd5f2">4. Level 10</a></li>
-<li><a href="#org178329d">5. Level 15</a></li>
-<li><a href="#org333af9a">6. Level 19</a></li>
+<li><a href="#orgf0e10cc">1. Paladin Traits</a></li>
+<li><a href="#orgb954f6f">2. Level 1</a></li>
+<li><a href="#orgd3127b9">3. Level 2</a></li>
+<li><a href="#org3d717e2">4. Level 5</a></li>
+<li><a href="#org68f8529">5. Level 10</a></li>
+<li><a href="#org04fb1ee">6. Level 15</a></li>
+<li><a href="#org12203e4">7. Level 19</a></li>
 </ul>
 </div>
 </div>
@@ -218,51 +219,78 @@
 </div>
 <hr />
 <p>
-Brainless devotee of their faith. Absolute conversation-killers. Casts spells with Intelligence primarily. Does not require a catalyst to cast spells, can instead cast spells entirely with the power of their blind faith.
+Brainless devotee of their faith. Absolute conversation-killers. Casts spells with Charisma primarily. Does not require a catalyst to cast spells, can instead cast spells entirely with the power of their blind faith.
 </p>
-
-<div id="outline-container-orgbf22e8a" class="outline-2">
-<h2 id="orgbf22e8a"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-orgf0e10cc" class="outline-2">
+<h2 id="orgf0e10cc"><span class="section-number-2">1.</span> Paladin Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li>Gain <span class="underline">Judgment</span>:</li>
+<li><span class="underline"><i>Ass Kisser</i></span>: Regardless of your actions in the campaign, you will be considered Good creature by everyone you encounter, including the gods. Good for you.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org307ec95" class="outline-2">
-<h2 id="org307ec95"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-orgb954f6f" class="outline-2">
+<h2 id="orgb954f6f"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
-<li>Gain <span class="underline">Evangelism</span>: Convince low level INT targets around you to your faith by singing the praises of your God and preaching to the people. The power of your sermon will determine how many you can convince to ally with you in your endeavors.</li>
-<li>Gain Bake Sale</li>
+<li>Gain <span class="underline"><b>Judgment</b></span>:</li>
+<li>Gain <span class="underline">**</span>:</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org2785ef1" class="outline-2">
-<h2 id="org2785ef1"><span class="section-number-2">3.</span> Level 5</h2>
-</div>
-<div id="outline-container-org58dd5f2" class="outline-2">
-<h2 id="org58dd5f2"><span class="section-number-2">4.</span> Level 10</h2>
-</div>
-<div id="outline-container-org178329d" class="outline-2">
-<h2 id="org178329d"><span class="section-number-2">5.</span> Level 15</h2>
-<div class="outline-text-2" id="text-5">
+<div id="outline-container-orgd3127b9" class="outline-2">
+<h2 id="orgd3127b9"><span class="section-number-2">3.</span> Level 2</h2>
+<div class="outline-text-2" id="text-3">
 <ul class="org-ul">
-<li>Gain <span class="underline">Repentance</span>: Repent for an in-game sin that you committed and gain the following buffs for 3 turns:
+<li>Gain <span class="underline"><b>Evangelism</b></span>: Convince low level INT targets around you to your faith by singing the praises of your God and preaching to the people. The power of your sermon will determine how many you can convince to ally with you in your endeavors.</li>
+<li>Gain <span class="underline"><b>Bake Sale</b></span>: Attempt to gain the favor of a high INT target by organizing a bake sale for a cause of their choosing. The success of your bake sale will be determined by the amount of followers you can recruit to raise funds for the cause.</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org3d717e2" class="outline-2">
+<h2 id="org3d717e2"><span class="section-number-2">4.</span> Level 5</h2>
+<div class="outline-text-2" id="text-4">
+<ul class="org-ul">
+<li>Gain <span class="underline"><b>Rebuke</b></span>: Shun a non-believer and make them cower in the light of your lord. The target can take no actions and has -2 AC for 5 turns</li>
+<li>Gain <span class="underline"><b>Repentance</b></span>: Repent for an in-game sin that you committed and gain the following buffs for 3 turns:
 <ul class="org-ul">
 <li>+3 INT</li>
+<li>+3 CHA</li>
+<li>+5 AC</li>
 </ul></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org333af9a" class="outline-2">
-<h2 id="org333af9a"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-org68f8529" class="outline-2">
+<h2 id="org68f8529"><span class="section-number-2">5.</span> Level 10</h2>
+<div class="outline-text-2" id="text-5">
+<ul class="org-ul">
+<li>Gain <span class="underline"><b>Memorize Scripture</b></span>: Decipher a written spell (such as a scroll) once per day without needing to know the language or needing to remove any magical obfuscation.</li>
+<li>Gain <span class="underline"><b>Never Ending Sermon</b></span>: Hold the attention of all targets that fail a Religion check until you choose to end the sermon</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org04fb1ee" class="outline-2">
+<h2 id="org04fb1ee"><span class="section-number-2">6.</span> Level 15</h2>
+<div class="outline-text-2" id="text-6">
+<ul class="org-ul">
+<li>Increase the power of <span class="underline"><b>Evangelism</b></span> so that you simply have to be in the presence of most mid to low level INT targets to convince them to join your cause.</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org12203e4" class="outline-2">
+<h2 id="org12203e4"><span class="section-number-2">7.</span> Level 19</h2>
+<div class="outline-text-2" id="text-7">
+<ul class="org-ul">
+<li>Gain <span class="underline"><b>Judgment Day</b></span>: Call on the gods to judge a target of your choosing. If they success in judgment, they will receive the Blessed buff and are healed to half health. If they fail judgment, they take 15d10 radiant damage.</li>
+</ul>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-11 Fri 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 15:25</p>
+<p class="date">Created: 2024-03-01 Fri 16:00</p>
 </div>
 </body>
 </html>
