--- a/classes/subclasses/muse.html
+++ b/classes/subclasses/muse.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 11:52 -->
+<!-- 2024-03-01 Fri 15:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Muse</title>
@@ -202,12 +202,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8efd3f2">1. Level 1</a></li>
-<li><a href="#org331064f">2. Level 2</a></li>
-<li><a href="#orgda50dc3">3. Level 5</a></li>
-<li><a href="#orgbb36ff3">4. Level 10</a></li>
-<li><a href="#org05c88d5">5. Level 15</a></li>
-<li><a href="#orga27d977">6. Level 19</a></li>
+<li><a href="#org7aa8a0f">1. Level 1</a></li>
+<li><a href="#org3945083">2. Level 2</a></li>
+<li><a href="#org897ae08">3. Level 5</a></li>
+<li><a href="#org9901984">4. Level 10</a></li>
+<li><a href="#org16b8972">5. Level 15</a></li>
+<li><a href="#org21e3d4f">6. Level 19</a></li>
 </ul>
 </div>
 </div>
@@ -217,8 +217,8 @@
 </p>
 </div>
 <hr />
-<div id="outline-container-org8efd3f2" class="outline-2">
-<h2 id="org8efd3f2"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-org7aa8a0f" class="outline-2">
+<h2 id="org7aa8a0f"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>Gain the ability to play two instruments of you choice</li>
@@ -227,8 +227,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org331064f" class="outline-2">
-<h2 id="org331064f"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-org3945083" class="outline-2">
+<h2 id="org3945083"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.</li>
@@ -236,37 +236,36 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orgda50dc3" class="outline-2">
-<h2 id="orgda50dc3"><span class="section-number-2">3.</span> Level 5</h2>
+<div id="outline-container-org897ae08" class="outline-2">
+<h2 id="org897ae08"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>Your enchanted instrument&rsquo;s base damages increases to 1d8.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbb36ff3" class="outline-2">
-<h2 id="orgbb36ff3"><span class="section-number-2">4.</span> Level 10</h2>
+<div id="outline-container-org9901984" class="outline-2">
+<h2 id="org9901984"><span class="section-number-2">4.</span> Level 10</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>Gain <span class="underline">Spectral Manager</span>: The manager will keep you informed of any important cultural and political requests upon request. It may also send you concert invites, and give you a hookup for drugs.</li>
-
 <li>Gain <span class="underline">Booking Agent</span>: Once per long rest, you many travel to any part of the world in a single day, and the agent will arrange travel free of cost.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org05c88d5" class="outline-2">
-<h2 id="org05c88d5"><span class="section-number-2">5.</span> Level 15</h2>
+<div id="outline-container-org16b8972" class="outline-2">
+<h2 id="org16b8972"><span class="section-number-2">5.</span> Level 15</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li>Gain a Patron Demigod. One of the Demigods will adopt you as their muse, and once every 3 combat sessions, you may summon the Demigod to assist you. Note: that not all Demigods are good fighters. Patron Demigods are automatically reassigned upon the death of the player&rsquo;s previous Demigod. Do with that what you will. There may be consequences if you disappoint your Patron with the music you play.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orga27d977" class="outline-2">
-<h2 id="orga27d977"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-org21e3d4f" class="outline-2">
+<h2 id="org21e3d4f"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
-<li>Gain knowledge of the <span class="underline"><b>Eldrich Tunes</b></span>: Upon playing the Eldrich Tunes to completion, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.</li>
+<li>Gain knowledge of the <span class="underline"><b>Eldrich Tune</b></span>: Upon playing the Eldrich Tune to completion, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.</li>
 </ul>
 </div>
 </div>
@@ -284,7 +283,7 @@ Glossary: <a href="../../glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 11:52</p>
+<p class="date">Created: 2024-03-01 Fri 15:19</p>
 </div>
 </body>
 </html>
