--- a/classes/subclasses/ninja.html
+++ b/classes/subclasses/ninja.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-11 Fri 22:16 -->
+<!-- 2024-03-01 Fri 16:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Ninja</title>
@@ -202,36 +202,35 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb5a6b39">1. Level 1</a></li>
-<li><a href="#orgbeb729d">2. Level 2</a></li>
-<li><a href="#org36ecea0">3. Level 5</a></li>
-<li><a href="#org42ddb50">4. Level 10</a></li>
-<li><a href="#org665d910">5. Level 15</a></li>
-<li><a href="#orgb09a2ec">6. Level 19</a></li>
+<li><a href="#org9dce957">1. Level 1</a></li>
+<li><a href="#orge52d302">2. Level 2</a></li>
+<li><a href="#orgd3468aa">3. Level 5</a></li>
+<li><a href="#org004008b">4. Level 10</a></li>
+<li><a href="#org13403fd">5. Level 15</a></li>
+<li><a href="#org29170b4">6. Level 19</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="../../player_introduction.html#ID-f1eac65b-54c1-49f8-b117-e7d46f40b82c">Player Introduction</a>] [<a href="../classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>] [<a href="../rogue.html#ID-0b7f7671-c4de-41e9-b199-4a9ceb6352d2">Rogue</a>]
+[<a href="../../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="../classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>] [<a href="../rogue.html#ID-0b7f7671-c4de-41e9-b199-4a9ceb6352d2">Rogue</a>]
 </p>
 </div>
 <hr />
 <p>
 Use the shadows to your advantage, and gain more maneuverability when avoiding the gaze of the enemy.
 </p>
-
-<div id="outline-container-orgb5a6b39" class="outline-2">
-<h2 id="orgb5a6b39"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-org9dce957" class="outline-2">
+<h2 id="org9dce957"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li>Gain 20 shurikens. Shurikens deal 1d6 damage and you can throw two at the same target with one action. Easy to lose, and not readily acquired, be careful!</li>
+<li>Gain 20 iron shurikens. Shurikens deal 1d6 damage and you can throw two at the same target with one action. Easy to lose, and not readily acquired, be careful!</li>
 <li>Gain +2 to stealth</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbeb729d" class="outline-2">
-<h2 id="orgbeb729d"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-orge52d302" class="outline-2">
+<h2 id="orge52d302"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>When attacking an enemy from behind, deal an extra 1d6 damage.</li>
@@ -240,8 +239,8 @@ Use the shadows to your advantage, and gain more maneuverability when avoiding t
 </ul>
 </div>
 </div>
-<div id="outline-container-org36ecea0" class="outline-2">
-<h2 id="org36ecea0"><span class="section-number-2">3.</span> Level 5</h2>
+<div id="outline-container-orgd3468aa" class="outline-2">
+<h2 id="orgd3468aa"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>Attacks when falling, running, jumping, somersaulting, or any other sort of athletic move have an additional +2 to hit</li>
@@ -249,8 +248,8 @@ Use the shadows to your advantage, and gain more maneuverability when avoiding t
 </ul>
 </div>
 </div>
-<div id="outline-container-org42ddb50" class="outline-2">
-<h2 id="org42ddb50"><span class="section-number-2">4.</span> Level 10</h2>
+<div id="outline-container-org004008b" class="outline-2">
+<h2 id="org004008b"><span class="section-number-2">4.</span> Level 10</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>Your maximum shuriken capacity increases to 35. You gain all shurikens back.</li>
@@ -258,19 +257,19 @@ Use the shadows to your advantage, and gain more maneuverability when avoiding t
 </ul>
 </div>
 </div>
-<div id="outline-container-org665d910" class="outline-2">
-<h2 id="org665d910"><span class="section-number-2">5.</span> Level 15</h2>
+<div id="outline-container-org13403fd" class="outline-2">
+<h2 id="org13403fd"><span class="section-number-2">5.</span> Level 15</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li>Deal 150% damage to lawful enemies</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb09a2ec" class="outline-2">
-<h2 id="orgb09a2ec"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-org29170b4" class="outline-2">
+<h2 id="org29170b4"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
-<li>Gain Shadow Step: Become completely invisible to everything except Truesight for 3 turns once per combat encounter. During Shadow Step you gain an extra action. You dodge all attacks except those that critically strike during the duration of Shadow Step.</li>
+<li>Gain <span class="underline"><b>Shadow Step</b></span>: Become completely invisible to everything except Truesight for 3 turns once per combat encounter. During Shadow Step you gain an extra action. You dodge all attacks except those that critically strike during the duration of Shadow Step.</li>
 </ul>
 <hr />
 </div>
@@ -279,7 +278,7 @@ Use the shadows to your advantage, and gain more maneuverability when avoiding t
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-15 Sat 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-11 Fri 22:16</p>
+<p class="date">Created: 2024-03-01 Fri 16:27</p>
 </div>
 </body>
 </html>
