--- a/classes/subclasses/order_sorcerer.html
+++ b/classes/subclasses/order_sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-16 Wed 08:33 -->
+<!-- 2024-03-01 Fri 16:11 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Order Sorcerer</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga09d6c9">1. Sorcery Traits:</a></li>
-<li><a href="#orgdfc26ae">2. Level 1 Sorceries</a></li>
-<li><a href="#org526860b">3. Level 2 Sorceries</a></li>
-<li><a href="#orge4cd374">4. Level 3 Sorceries</a></li>
-<li><a href="#org354b5b1">5. Level 4</a></li>
+<li><a href="#org9e3dbf3">1. Sorcery Traits:</a></li>
+<li><a href="#org8a2cde1">2. Level 1 Sorceries</a></li>
+<li><a href="#org7e9c915">3. Level 2 Sorceries (5+)</a></li>
+<li><a href="#org4d34574">4. Level 3 Sorceries (11+)</a></li>
+<li><a href="#orgae40a20">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -219,19 +219,18 @@
 <p>
 Order sorcerers structure the future, and are able to frustrate enemies and allies alike by impeding their endeavors. They can grant powerful assistance to the party in times of need, but often require multiple turns to set up attacks.
 </p>
-
-<div id="outline-container-orga09d6c9" class="outline-2">
-<h2 id="orga09d6c9"><span class="section-number-2">1.</span> Sorcery Traits:</h2>
+<div id="outline-container-org9e3dbf3" class="outline-2">
+<h2 id="org9e3dbf3"><span class="section-number-2">1.</span> Sorcery Traits:</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
-<li><i>Lawful Struggle</i>: Any damage you deal to Chaotic enemies is increased by 50%.</li>
-<li><i>Rule Follower</i>: Regardless of your actions within the campaign, you will be considered a Lawful creature for the rest of the game by everyone you encounter, including the gods. Your persuasion modifier is permanently +2.</li>
-<li><i>Spirit of Justice</i>: Gain permanent insight into the rules and customs of any region that you enter. This insight may extend to the ordinary behavior of any inhabitants within the region.</li>
+<li><span class="underline"><i>Lawful Struggle</i></span>: Any damage you deal to Chaotic enemies is increased by 50%.</li>
+<li><span class="underline"><i>Rule Follower</i></span>: Regardless of your actions within the campaign, you will be considered a Lawful creature for the rest of the game by everyone you encounter, including the gods. Your persuasion modifier is permanently +2.</li>
+<li><span class="underline"><i>Spirit of Justice</i></span>: Gain permanent insight into the rules and customs of any region that you enter. This insight may extend to the ordinary behavior of any inhabitants within the region.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdfc26ae" class="outline-2">
-<h2 id="orgdfc26ae"><span class="section-number-2">2.</span> Level 1 Sorceries</h2>
+<div id="outline-container-org8a2cde1" class="outline-2">
+<h2 id="org8a2cde1"><span class="section-number-2">2.</span> Level 1 Sorceries</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Delayed Gratification</b></span>: Roll to hit two enemies within 20 feet. If successful, next turn both enemies will take 2d6 force damage.</li>
@@ -240,8 +239,8 @@ Order sorcerers structure the future, and are able to frustrate enemies and alli
 </ul>
 </div>
 </div>
-<div id="outline-container-org526860b" class="outline-2">
-<h2 id="org526860b"><span class="section-number-2">3.</span> Level 2 Sorceries</h2>
+<div id="outline-container-org7e9c915" class="outline-2">
+<h2 id="org7e9c915"><span class="section-number-2">3.</span> Level 2 Sorceries (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Borrowed Luck</b></span>: Grant all allies +3 on rolls next turn. This spell does not apply to you.</li>
@@ -250,8 +249,8 @@ Order sorcerers structure the future, and are able to frustrate enemies and alli
 </ul>
 </div>
 </div>
-<div id="outline-container-orge4cd374" class="outline-2">
-<h2 id="orge4cd374"><span class="section-number-2">4.</span> Level 3 Sorceries</h2>
+<div id="outline-container-org4d34574" class="outline-2">
+<h2 id="org4d34574"><span class="section-number-2">4.</span> Level 3 Sorceries (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Omen</b></span>: Learn what type of damage all enemies are vulnerable to. For the rest of combat, all allies attacks that deal force damage deal that type of damage instead. All attacks against enemies deal 1.25% more damage for two turns.</li>
@@ -259,8 +258,8 @@ Order sorcerers structure the future, and are able to frustrate enemies and alli
 </ul>
 </div>
 </div>
-<div id="outline-container-org354b5b1" class="outline-2">
-<h2 id="org354b5b1"><span class="section-number-2">5.</span> Level 4</h2>
+<div id="outline-container-orgae40a20" class="outline-2">
+<h2 id="orgae40a20"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Omniprecient</b></span>: You now have the ability to become prescient of all future events for a given quest or storyline. You may work with the DM to decide some aspect of the future that you would like to change. Because of the (broken) nature of this power, This spell is highly limited, but can alter the course of a campaign. <i>You must visit a Temple of Order to regain the power</i>.</li>
@@ -272,7 +271,7 @@ Order sorcerers structure the future, and are able to frustrate enemies and alli
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-17 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-16 Wed 08:33</p>
+<p class="date">Created: 2024-03-01 Fri 16:11</p>
 </div>
 </body>
 </html>
