--- a/classes/subclasses/rebel.html
+++ b/classes/subclasses/rebel.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-11 Mon 19:47 -->
+<!-- 2024-03-01 Fri 16:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Rebel</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8adbf85">1. Rebel Traits</a></li>
-<li><a href="#orgcff18ed">2. Level 1</a></li>
-<li><a href="#org60d41cc">3. Level 2 (5+)</a></li>
-<li><a href="#orgab2e3d1">4. Level 3 (11+)</a></li>
-<li><a href="#org1dcedb4">5. Level 4 (15+)</a></li>
+<li><a href="#org5ac8591">1. Rebel Traits</a></li>
+<li><a href="#org54ee35f">2. Level 1</a></li>
+<li><a href="#org036bd7c">3. Level 2 (5+)</a></li>
+<li><a href="#orgfbbeeac">4. Level 3 (11+)</a></li>
+<li><a href="#org7309fb6">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -219,8 +219,8 @@
 <p>
 Fight the power. Front line soldier empowered with the revolutionary spirit.
 </p>
-<div id="outline-container-org8adbf85" class="outline-2">
-<h2 id="org8adbf85"><span class="section-number-2">1.</span> Rebel Traits</h2>
+<div id="outline-container-org5ac8591" class="outline-2">
+<h2 id="org5ac8591"><span class="section-number-2">1.</span> Rebel Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><i>Opportunist</i></span>: When participating in a riot, uprising, coup, assassination attempt, or other disturbance of normal civic activity, you deal 50% extra damage.</li>
@@ -228,8 +228,8 @@ Fight the power. Front line soldier empowered with the revolutionary spirit.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcff18ed" class="outline-2">
-<h2 id="orgcff18ed"><span class="section-number-2">2.</span> Level 1</h2>
+<div id="outline-container-org54ee35f" class="outline-2">
+<h2 id="org54ee35f"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Idealist</b></span>: Stand by your convictions and raise your attack</li>
@@ -238,8 +238,8 @@ Fight the power. Front line soldier empowered with the revolutionary spirit.
 </ul>
 </div>
 </div>
-<div id="outline-container-org60d41cc" class="outline-2">
-<h2 id="org60d41cc"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
+<div id="outline-container-org036bd7c" class="outline-2">
+<h2 id="org036bd7c"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Underdog</b></span> Once per long rest, increase your parties hit rolls by +3</li>
@@ -247,8 +247,8 @@ Fight the power. Front line soldier empowered with the revolutionary spirit.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgab2e3d1" class="outline-2">
-<h2 id="orgab2e3d1"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
+<div id="outline-container-orgfbbeeac" class="outline-2">
+<h2 id="orgfbbeeac"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Guerrilla Warfare</b></span>: If your party is all undetected before ambushing an enemy or group of enemies, all targets will have the shocked debuff applied to them for the duration of the combat encounter.</li>
@@ -257,8 +257,8 @@ Fight the power. Front line soldier empowered with the revolutionary spirit.
 </ul>
 </div>
 </div>
-<div id="outline-container-org1dcedb4" class="outline-2">
-<h2 id="org1dcedb4"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
+<div id="outline-container-org7309fb6" class="outline-2">
+<h2 id="org7309fb6"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Rebel Leader</b></span>: You become immune to magic that can detect your thoughts or emotions, unless you choose to be affected. You also can communicate telepathically with a creature with whom you share a soul covenant with at any distance on the same plane of existence.</li>
@@ -270,7 +270,7 @@ Fight the power. Front line soldier empowered with the revolutionary spirit.
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-11 Fri 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-11 Mon 19:47</p>
+<p class="date">Created: 2024-03-01 Fri 16:22</p>
 </div>
 </body>
 </html>
