--- a/classes/subclasses/soldier.html
+++ b/classes/subclasses/soldier.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-11 Mon 19:49 -->
+<!-- 2024-03-01 Fri 16:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Soldier</title>
@@ -202,10 +202,10 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9905200">1. Level 1</a></li>
-<li><a href="#org0d39d5e">2. Level 2 (5+)</a></li>
-<li><a href="#orge3f7e05">3. Level 3 (11+)</a></li>
-<li><a href="#orgdac252c">4. Level 4 (15+)</a></li>
+<li><a href="#orgd3cdc54">1. Level 1</a></li>
+<li><a href="#orgcdf7aa7">2. Level 2 (5+)</a></li>
+<li><a href="#org6397fcc">3. Level 3 (11+)</a></li>
+<li><a href="#orgaa858eb">4. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -215,8 +215,8 @@
 </p>
 </div>
 <hr />
-<div id="outline-container-org9905200" class="outline-2">
-<h2 id="org9905200"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-orgd3cdc54" class="outline-2">
+<h2 id="orgd3cdc54"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>Gain <span class="underline">Perfect Duel Wielding</span>: You suffer no reduction in bonuses that everyone else does when wielding a weapon in both hands</li>
@@ -224,8 +224,8 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org0d39d5e" class="outline-2">
-<h2 id="org0d39d5e"><span class="section-number-2">2.</span> Level 2 (5+)</h2>
+<div id="outline-container-orgcdf7aa7" class="outline-2">
+<h2 id="orgcdf7aa7"><span class="section-number-2">2.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>Gain <span class="underline">Valor</span>: If you are the last combatant standing, and there are two or less enemies, you gain the following bonuses
@@ -239,16 +239,16 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-orge3f7e05" class="outline-2">
-<h2 id="orge3f7e05"><span class="section-number-2">3.</span> Level 3 (11+)</h2>
+<div id="outline-container-org6397fcc" class="outline-2">
+<h2 id="org6397fcc"><span class="section-number-2">3.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>Gain <span class="underline">Soldier&rsquo;s Duel</span>: If you are the only one targeting an enemy (and they are the only one targeting you) gain advantage on all Reaction and Bonus actions. You also gain +2 to hit.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgdac252c" class="outline-2">
-<h2 id="orgdac252c"><span class="section-number-2">4.</span> Level 4 (15+)</h2>
+<div id="outline-container-orgaa858eb" class="outline-2">
+<h2 id="orgaa858eb"><span class="section-number-2">4.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>Upgrade <span class="underline">Valor</span>: If you are the last combatant standing, and there are 5 or less enemies, you gain the following bonuses</li>
@@ -259,7 +259,7 @@
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-11 Fri 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-11 Mon 19:49</p>
+<p class="date">Created: 2024-03-01 Fri 16:21</p>
 </div>
 </body>
 </html>
