--- a/classes/subclasses/storm_wizard.html
+++ b/classes/subclasses/storm_wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-08 Fri 14:09 -->
+<!-- 2024-03-01 Fri 15:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Storm Wizard 🌩</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org003e989">1. Elemental Traits</a></li>
-<li><a href="#org6d888fb">2. Level 1</a></li>
-<li><a href="#org7224a86">3. Level 2 (5+)</a></li>
-<li><a href="#org3e64a13">4. Level 3 (11+)</a></li>
-<li><a href="#org7523d0e">5. Level 4 (15+)</a></li>
+<li><a href="#orgab390e8">1. Elemental Traits</a></li>
+<li><a href="#org6f1ce77">2. Level 1</a></li>
+<li><a href="#orgac123c5">3. Level 2 (5+)</a></li>
+<li><a href="#org5c0a1b0">4. Level 3 (11+)</a></li>
+<li><a href="#org4a72f7d">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -217,21 +217,20 @@
 </div>
 <hr />
 <p>
-While storm wizards lack the sheer damage output capabilities of other wizards, Storm Wizards operate using ice and lightning damage. This gives them the flexibility to counter different immunities that a target may posses.
+While storm wizards lack the sheer damage output capabilities of other wizards, Storm Wizards operate using ice and lightning damage. This gives them the flexibility to counter different immunity&rsquo;s that a target may posses.
 </p>
-
-<div id="outline-container-org003e989" class="outline-2">
-<h2 id="org003e989"><span class="section-number-2">1.</span> Elemental Traits</h2>
+<div id="outline-container-orgab390e8" class="outline-2">
+<h2 id="orgab390e8"><span class="section-number-2">1.</span> Elemental Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><i>Ice Immunity</i></span>: Become immune to ice damage for the rest of the game. You will take half damage if the ice damage is paired with another type of damage.</li>
-<li><span class="underline"><i>Ice Immunity</i></span>: Become immune to lightning damage for the rest of the game. You will take half damage if the lightning damage is paired with another type of damage.</li>
+<li><span class="underline"><i>Lightning Immunity</i></span>: Become immune to lightning damage for the rest of the game. You will take half damage if the lightning damage is paired with another type of damage.</li>
 <li><span class="underline"><i>Underwater Breathing</i></span>: You can breathe underwater. Grant one ally of your choice the ability to breath underwater while you are submerged in water. This ends when you exit the water.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org6d888fb" class="outline-2">
-<h2 id="org6d888fb"><span class="section-number-2">2.</span> Level 1</h2>
+<div id="outline-container-org6f1ce77" class="outline-2">
+<h2 id="org6f1ce77"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Rainstorm</b></span>: It begins raining in a half-mile radius around the caster. This rainstorm may take up to five minutes to begin, depending on the caster&rsquo;s environment. Does not work in Hell.</li>
@@ -240,8 +239,8 @@ While storm wizards lack the sheer damage output capabilities of other wizards, 
 </ul>
 </div>
 </div>
-<div id="outline-container-org7224a86" class="outline-2">
-<h2 id="org7224a86"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
+<div id="outline-container-orgac123c5" class="outline-2">
+<h2 id="orgac123c5"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Lightning Bolt</b></span>: Roll to hit. On hit, summon a lightning bolt from the heavens to strike a target you can see. They take 3d8 lightning damage, and are stunned for one turn if they fail a constitution check.</li>
@@ -250,8 +249,8 @@ While storm wizards lack the sheer damage output capabilities of other wizards, 
 </ul>
 </div>
 </div>
-<div id="outline-container-org3e64a13" class="outline-2">
-<h2 id="org3e64a13"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
+<div id="outline-container-org5c0a1b0" class="outline-2">
+<h2 id="org5c0a1b0"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Summon Store Elemental</b></span>: Use your action to summon a storm elemental to fight for you for 6 turns. It has 50 health, deals 2d8 damage on hit, and it has 15 AC. If it lands the killing blow to a target, it stays around for an additional three turns. The storm elemental can only be summoned if there is some sort of water nearby and the party is in combat.</li>
@@ -259,8 +258,8 @@ While storm wizards lack the sheer damage output capabilities of other wizards, 
 </ul>
 </div>
 </div>
-<div id="outline-container-org7523d0e" class="outline-2">
-<h2 id="org7523d0e"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
+<div id="outline-container-org4a72f7d" class="outline-2">
+<h2 id="org4a72f7d"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Entomb</b></span>: Seal a creature within ice for the next month. This only takes effect if they fail a constitution saving throw (DC 18). During this time, they drop to one health, but do not die and are conscious of the events around them. Entomb instantly kills fire-based creatures. <i>Huge creatures cannot be entombed</i>.</li>
@@ -272,7 +271,7 @@ While storm wizards lack the sheer damage output capabilities of other wizards, 
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-08 Fri 14:09</p>
+<p class="date">Created: 2024-03-01 Fri 15:45</p>
 </div>
 </body>
 </html>
