--- a/classes/warrior.html
+++ b/classes/warrior.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-11 Mon 18:02 -->
+<!-- 2024-03-01 Fri 16:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Warrior</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org13892f2">1. Proficiencies</a></li>
-<li><a href="#org3a7f140">2. Level-up</a></li>
+<li><a href="#org196acf7">1. Proficiencies</a></li>
+<li><a href="#orgcd40446">2. Level-up</a></li>
 </ul>
 </div>
 </div>
@@ -214,16 +214,15 @@
 </div>
 <hr />
 <p>
-Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily. To start as a Warrior, first choose a subclass: [<a href="subclasses/soldier.html#ID-2cbe3cbc-4959-44c9-9f33-a96424651355">Soldier</a>, <a href="subclasses/rebel.html#ID-83fe62a2-eb63-488d-897e-b5b439718f03">Rebel</a>, Brute]. These classes give you special traits and abilities that give you some distinct advantages.
+Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily. To start as a Warrior, first choose a subclass: [<a href="subclasses/soldier.html#ID-2cbe3cbc-4959-44c9-9f33-a96424651355">Soldier</a>, <a href="subclasses/rebel.html#ID-83fe62a2-eb63-488d-897e-b5b439718f03">Rebel</a>, <a href="subclasses/brute.html#ID-da305734-97ab-40f1-aacc-ad8c31ce25f4">Brute</a>]. These classes give you special traits and abilities that give you some distinct advantages. Be sure to choose a level 1 subclass ability and subclass trait to apply to your character.
 </p>
 
 <ul class="org-ul">
-<li><span class="underline">Initial Health</span>: Roll a 1d8 and add it to your base HP. This is your Hit Die (HD). You will add the amount your rol lto your base health every time your level up.</li>
-<li>Gain one talisman at start</li>
+<li><span class="underline">Initial Health</span>: Roll a 1d8 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
+<li>Gain one talisman at level 1.</li>
 </ul>
-
-<div id="outline-container-org13892f2" class="outline-2">
-<h2 id="org13892f2"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org196acf7" class="outline-2">
+<h2 id="org196acf7"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -244,55 +243,66 @@ Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapo
 </thead>
 <tbody>
 <tr>
+<td class="org-left">All Armor</td>
+<td class="org-left">Short sword</td>
 <td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-left">&#xa0;</td>
+<td class="org-left">Long Sword</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Daggers</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Spears</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Halberd</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
 </div>
 </div>
-<div id="outline-container-org3a7f140" class="outline-2">
-<h2 id="org3a7f140"><span class="section-number-2">2.</span> Level-up</h2>
+<div id="outline-container-orgcd40446" class="outline-2">
+<h2 id="orgcd40446"><span class="section-number-2">2.</span> Level-up</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
-<li>Gain <span class="underline">Warrior Reactions</span>: Parry and Block. Success of parrying increases with lower damages (1% of your health = 99% parry chance, 50% of health = 0% parry chance). Block reduces damage in accordance with the Warrior Shield chart on passing a constitution save. Unsuccessful parries prevent parrying on the next turn.</li>
+<li>Gain <span class="underline">Warrior Reactions</span>: Parry and Block. Success of parrying increases with lower damages (1% of your health = 99% parry chance, 50% of health = 0% parry chance). Block reduces damage in accordance with the Warrior Shield chart on passing a constitution save. Unsuccessful parries prevent parrying on the next turn. Add a subclass ability.</li>
 <li>Add a subclass ability.</li>
 <li>Become proficient with a new class of weapon.</li>
-<li>Add +1 to Athletics and +1 to Strength.</li>
-<li>Gain an extra attack</li>
+<li>Add +1 to Athletics and +1 to Strength. Add a subclass ability</li>
+<li>Gain <span class="underline">Duelist</span>: When fighting a one-on-one battle, deal 1.5x damage to your opponent.</li>
 <li>Gain <span class="underline">Last Stand</span>: The first attack that knocks you unconscious instead reduces you to 1 HP.</li>
 <li>Gain <span class="underline">Throw Weapon</span>: You may now throw any melee weapon you have at an enemy within 50 feet to deal 3x damage. Subtract -4 on rolls to hit.</li>
-<li></li>
-
-<li></li>
-
-<li>Gain <span class="underline">Duelist</span>: When fighting a one-on-one battle, deal 1.5x damage to your opponent.</li>
+<li>Gain an extra attack</li>
 <li>Gain <span class="underline">Rampage</span>: When you&rsquo;ve taken damage from more than 1 enemy in the last turn, become able to attack every enemy in a thirty-foot radius with your actions.</li>
 <li>Unsuccessful parries no longer prevent a consecutive parry</li>
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li></li>
-
-<li>Multiclass</li>
 </ol>
+
+<div class="org-center">
+<p>
+&#x2014; 🚧 Under Construction 🚧 &#x2014;
+</p>
+</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-10 Thu 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-11 Mon 18:02</p>
+<p class="date">Created: 2024-03-01 Fri 16:23</p>
 </div>
 </body>
 </html>
