--- a/classes/merchant.html
+++ b/classes/merchant.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-23 Fri 13:51 -->
+<!-- 2024-03-01 Fri 16:18 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Merchant</title>
@@ -202,15 +202,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga2225e9">1. Proficiencies</a></li>
-<li><a href="#orgbc770eb">2. Merchant Traits</a></li>
-<li><a href="#org8b91108">3. Level-up guide</a></li>
-<li><a href="#orge8bab9b">4. Merchant Skills</a>
+<li><a href="#org9f9bc65">1. Proficiencies</a></li>
+<li><a href="#orgc165d01">2. Merchant Traits</a></li>
+<li><a href="#org70ab220">3. Level-up guide</a></li>
+<li><a href="#orgbd9dc83">4. Merchant Skills</a>
 <ul>
-<li><a href="#orga406f9e">4.1. Level 1</a></li>
-<li><a href="#org847c208">4.2. Level 2 (5+)</a></li>
-<li><a href="#org9c812d5">4.3. Level 3 (11+)</a></li>
-<li><a href="#org1f2353d">4.4. Level 4 (15+)</a></li>
+<li><a href="#orgf7fa671">4.1. Level 1</a></li>
+<li><a href="#org723b468">4.2. Level 2 (5+)</a></li>
+<li><a href="#org946bba0">4.3. Level 3 (11+)</a></li>
+<li><a href="#org2352670">4.4. Level 4 (15+)</a></li>
 </ul>
 </li>
 </ul>
@@ -223,16 +223,15 @@
 </div>
 <hr />
 <p>
-Buy low, sell high! Focus on acquiring as much money as possible; making trades and building a reputation across the cities of the world.
+Buy low, sell high! Focus on acquiring as much money as possible; making trades and building a reputation across the cities of the world. Be sure to select one level 1 skill and 1 trait to apply to your character.
 </p>
 
 <ul class="org-ul">
 <li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount you roll to your base health every time you level up.</li>
 <li>Start with 30 Silver, 15 Gold, and 3 Dragon Pesos</li>
 </ul>
-
-<div id="outline-container-orga2225e9" class="outline-2">
-<h2 id="orga2225e9"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org9f9bc65" class="outline-2">
+<h2 id="org9f9bc65"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -267,8 +266,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </table>
 </div>
 </div>
-<div id="outline-container-orgbc770eb" class="outline-2">
-<h2 id="orgbc770eb"><span class="section-number-2">2.</span> Merchant Traits</h2>
+<div id="outline-container-orgc165d01" class="outline-2">
+<h2 id="orgc165d01"><span class="section-number-2">2.</span> Merchant Traits</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><i>Heavy Sleeper</i></span>: Whenever you take a long rest, you cannot be woken up halfway through no matter what happens. This can include your death. In exchange, an hour after you wake up, your AC is increased by 2, you get +2 to CHA, your health is increased by 15, and you get +3 to Deception and Insight.</li>
@@ -276,8 +275,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </ul>
 </div>
 </div>
-<div id="outline-container-org8b91108" class="outline-2">
-<h2 id="org8b91108"><span class="section-number-2">3.</span> Level-up guide</h2>
+<div id="outline-container-org70ab220" class="outline-2">
+<h2 id="org70ab220"><span class="section-number-2">3.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-3">
 <ol class="org-ol">
 <li>Gain 1 Merchant skill</li>
@@ -286,9 +285,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 <li></li>
 
 <li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
-<li></li>
-
 <li>You decide its time to open your ears to new international opportunities! Learn 1 new language of your choice.</li>
+<li>Choose an additional trait to apply to your character</li>
 <li></li>
 
 <li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
@@ -321,12 +319,12 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </div>
 </div>
 </div>
-<div id="outline-container-orge8bab9b" class="outline-2">
-<h2 id="orge8bab9b"><span class="section-number-2">4.</span> Merchant Skills</h2>
+<div id="outline-container-orgbd9dc83" class="outline-2">
+<h2 id="orgbd9dc83"><span class="section-number-2">4.</span> Merchant Skills</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orga406f9e" class="outline-3">
-<h3 id="orga406f9e"><span class="section-number-3">4.1.</span> Level 1</h3>
+<div id="outline-container-orgf7fa671" class="outline-3">
+<h3 id="orgf7fa671"><span class="section-number-3">4.1.</span> Level 1</h3>
 <div class="outline-text-3" id="text-4-1">
 <ul class="org-ul">
 <li><span class="underline"><b>Seedy</b></span>: When fighting in an urban area, gain an extra attack, as well as advantage if you&rsquo;re the first person to move in a round.</li>
@@ -335,8 +333,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </ul>
 </div>
 </div>
-<div id="outline-container-org847c208" class="outline-3">
-<h3 id="org847c208"><span class="section-number-3">4.2.</span> Level 2 (5+)</h3>
+<div id="outline-container-org723b468" class="outline-3">
+<h3 id="org723b468"><span class="section-number-3">4.2.</span> Level 2 (5+)</h3>
 <div class="outline-text-3" id="text-4-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Never Shit a Shitter</b></span>: Gain +2 to persuasion when trying to persuade someone who has a lower net worth than you do.</li>
@@ -344,8 +342,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </ul>
 </div>
 </div>
-<div id="outline-container-org9c812d5" class="outline-3">
-<h3 id="org9c812d5"><span class="section-number-3">4.3.</span> Level 3 (11+)</h3>
+<div id="outline-container-org946bba0" class="outline-3">
+<h3 id="org946bba0"><span class="section-number-3">4.3.</span> Level 3 (11+)</h3>
 <div class="outline-text-3" id="text-4-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Capitalist</b></span>: If you have lackeys (consult with DM to get definition of this term), they taunt whatever enemy you are attacking, forcing them to attack your wage slaves before targeting any member of the party. <i>Maximum of 3 lackeys can be used in combat</i>.</li>
@@ -353,8 +351,8 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 </ul>
 </div>
 </div>
-<div id="outline-container-org1f2353d" class="outline-3">
-<h3 id="org1f2353d"><span class="section-number-3">4.4.</span> Level 4 (15+)</h3>
+<div id="outline-container-org2352670" class="outline-3">
+<h3 id="org2352670"><span class="section-number-3">4.4.</span> Level 4 (15+)</h3>
 <div class="outline-text-3" id="text-4-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Advanced Bartering</b></span>: From now on, you can try to convince any enemy to stop fighting with you for a price. The price may be extremely high in some scenarios, but it may also be worth it</li>
@@ -367,7 +365,7 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-26 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2024-02-23 Fri 13:51</p>
+<p class="date">Created: 2024-03-01 Fri 16:18</p>
 </div>
 </body>
 </html>
