--- a/classes/prophet.html
+++ b/classes/prophet.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-23 Fri 13:16 -->
+<!-- 2024-03-01 Fri 16:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Prophet</title>
@@ -201,9 +201,17 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org11dfe3a">1. Proficiencies</a></li>
-<li><a href="#orgb5ddb7c">2. Prophet Traits</a></li>
-<li><a href="#org8483a26">3. Level-up guide</a></li>
+<li><a href="#org635e926">1. Proficiencies</a></li>
+<li><a href="#orga70d1e1">2. Prophet Traits</a></li>
+<li><a href="#org51f97fe">3. Level-up guide</a></li>
+<li><a href="#org98a2358">4. Prophet Skills</a>
+<ul>
+<li><a href="#orgc8cff59">4.1. Level 1</a></li>
+<li><a href="#orgc0513de">4.2. Level 2 (+5)</a></li>
+<li><a href="#org17192f4">4.3. Level 3 (+11)</a></li>
+<li><a href="#org9a37bf9">4.4. Level 4 (+15)</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -214,16 +222,15 @@
 </div>
 <hr />
 <p>
-Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
+Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world. Be sure you apply your level 1 bonuses from your Prophet skills and pick 1 trait to apply to your character. Make sure to review the <a href="../guides/spell-index.html#ID-7521a020-4fd2-4b75-9e24-5aa4c2fb69e3">Spell Index</a> for a full list of applicable spells Prophets can learn.
 </p>
 
 <ul class="org-ul">
 <li><span class="underline">Initial Health</span>: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
 <li><span class="underline">Spell Save DC</span>: 8 + FAI + PROF</li>
 </ul>
-
-<div id="outline-container-org11dfe3a" class="outline-2">
-<h2 id="org11dfe3a"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-org635e926" class="outline-2">
+<h2 id="org635e926"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -252,22 +259,47 @@ Chosen vessel of a particular God. Prophets do not know which God they channel a
 </table>
 </div>
 </div>
-<div id="outline-container-orgb5ddb7c" class="outline-2">
-<h2 id="orgb5ddb7c"><span class="section-number-2">2.</span> Prophet Traits</h2>
+<div id="outline-container-orga70d1e1" class="outline-2">
+<h2 id="orga70d1e1"><span class="section-number-2">2.</span> Prophet Traits</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
-<li><i>Blessed Attacks</i>: Your attacks have a 1 in 12 chance to be Blessed by your god, and will have bonus effects depending on your assigned god. Note: <i>This does not apply if you haven&rsquo;t determined which god you serve.</i></li>
-<li>You may no longer enter religious sites of deities other than your god. However, when you first visit a holy site of your god, you grant the entire party a permanent bonus. <i>Each god has three holy sites- some are well known, some are secret, so keep looking</i>! As before, you must have determined which god you serve before this trait can apply to your character.</li>
+<li><span class="underline"><i>Blessed Attacks</i></span>: Your attacks have a 1 in 12 chance to be Blessed by your god, and will have bonus effects depending on your assigned god. Note: <i>This does not apply if you haven&rsquo;t determined which god you serve.</i></li>
+<li><span class="underline"><i>Devout</i></span>: You may no longer enter religious sites of deities other than your god. However, when you first visit a holy site of your god, you grant the entire party a permanent bonus. <i>Each god has three holy sites- some are well known, some are secret, so keep looking</i>! As before, you must have determined which god you serve before this trait can apply to your character.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8483a26" class="outline-2">
-<h2 id="org8483a26"><span class="section-number-2">3.</span> Level-up guide</h2>
+<div id="outline-container-org51f97fe" class="outline-2">
+<h2 id="org51f97fe"><span class="section-number-2">3.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-3">
 <ol class="org-ol">
 <li>Pick two generic spells and one prophet trait (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
-<li>Gain the ability to foresee a bit of the future every 3 long rests</li>
+<li></li>
+
 <li>Add one generic spell, and one sorcerer spell to your spell list.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Gain <span class="underline"><b>Giant Slayer</b></span>: Your damage is increased against targets larger than your size. Add an additional 1d8</li>
+<li>Choose an additional trait to apply to your character.</li>
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li><span class="underline"><b>Giant Slayer</b></span> increases to additional 2d8 damage.</li>
+<li>Become one of the Elect. You are granted the ability to fly with a speed of 30 feet.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li></li>
+
+<li></li>
+
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Become Functionally Immortal. You can&rsquo;t age, you no longer need food and water, and you no longer fall ill. You can still die due to damage though.</li>
 </ol>
 
 <div class="org-center">
@@ -277,11 +309,49 @@ Chosen vessel of a particular God. Prophets do not know which God they channel a
 </div>
 </div>
 </div>
+<div id="outline-container-org98a2358" class="outline-2">
+<h2 id="org98a2358"><span class="section-number-2">4.</span> Prophet Skills</h2>
+<div class="outline-text-2" id="text-4">
+</div>
+<div id="outline-container-orgc8cff59" class="outline-3">
+<h3 id="orgc8cff59"><span class="section-number-3">4.1.</span> Level 1</h3>
+<div class="outline-text-3" id="text-4-1">
+<ul class="org-ul">
+<li><span class="underline"><b>Speaking Tongues</b></span>: Once every long rest, you can communicate with a creature in their tongue to sway them to your god&rsquo;s side. You understand all spoken languages and any creature that can understand that language can understand what you say</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-orgc0513de" class="outline-3">
+<h3 id="orgc0513de"><span class="section-number-3">4.2.</span> Level 2 (+5)</h3>
+<div class="outline-text-3" id="text-4-2">
+<ul class="org-ul">
+<li><span class="underline"><b>Empowered Strike</b></span></li>
+<li><span class="underline"><b>Prophetic Vision</b></span>: Gain the ability to foresee a bit of the future every 3 long rests</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org17192f4" class="outline-3">
+<h3 id="org17192f4"><span class="section-number-3">4.3.</span> Level 3 (+11)</h3>
+<div class="outline-text-3" id="text-4-3">
+<ul class="org-ul">
+<li><span class="underline"><b>Blessed</b></span>: You can shrug off some of the damage they take. You gain Resistance to magic and spell-like abilities and you are now immune to necrotic damage.</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org9a37bf9" class="outline-3">
+<h3 id="org9a37bf9"><span class="section-number-3">4.4.</span> Level 4 (+15)</h3>
+<div class="outline-text-3" id="text-4-4">
+<ul class="org-ul">
+<li><span class="underline"><b>Avatar</b></span>: Perfectly align with your god, allowing them to use your body for various functions. They can speak through you to others at any time, and can inhabit your body for 1 hour to perform tasks with advantage before they are expelled. Once they leave your body, you fall unconscious for 2d6 hours. Every 10 minutes they wish to remain in your body, roll a constitution check. On success they stay, on failure you immediately disintegrate and cannot be revived, even with a wish or divine intervention.</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-25 Tue 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2024-02-23 Fri 13:16</p>
+<p class="date">Created: 2024-03-01 Fri 16:17</p>
 </div>
 </body>
 </html>
