--- a/classes/sorcerer.html
+++ b/classes/sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-02-23 Fri 12:47 -->
+<!-- 2024-03-01 Fri 16:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sorcerer</title>
@@ -202,8 +202,8 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1fb2f1e">1. Proficiencies</a></li>
-<li><a href="#org5f1ae17">2. Level-up guide</a></li>
+<li><a href="#orgd7fe556">1. Proficiencies</a></li>
+<li><a href="#orgcd6ab6c">2. Level-up guide</a></li>
 </ul>
 </div>
 </div>
@@ -218,7 +218,7 @@ Manipulate the world around you in a manner of your choosing with latent powers 
 </p>
 
 <p>
-To begin playing as a Sorcerer, first choose a sorcery: [<a href="subclasses/order_sorcerer.html#ID-ca360c77-3d1d-43f3-9b6b-e65bb2b1f686">Order</a>, <a href="subclasses/chaos_sorcerer.html#ID-8cf16f81-68be-4205-9ff9-1c803443f6bc">Chaos</a>, <a href="subclasses/psychic_sorcerer.html#ID-569f7d4d-5744-49e4-ac0d-bebbd1795992">Psychic</a>]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the <a href="../guides/spell-index.html#ID-49c66431-d9c7-4213-ae29-b62365fd32d4">spell index</a>, generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system.
+To begin playing as a Sorcerer, first choose a sorcery: [<a href="subclasses/order_sorcerer.html#ID-ca360c77-3d1d-43f3-9b6b-e65bb2b1f686">Order</a>, <a href="subclasses/chaos_sorcerer.html#ID-8cf16f81-68be-4205-9ff9-1c803443f6bc">Chaos</a>, <a href="subclasses/psychic_sorcerer.html#ID-569f7d4d-5744-49e4-ac0d-bebbd1795992">Psychic</a>]. Each sorcery comes with some special abilities as you get stronger, and a few distinct advantages right off the jump. All sorcerers can learn generic spells in the <a href="../guides/spell-index.html#ID-49c66431-d9c7-4213-ae29-b62365fd32d4">spell index</a>, generic sorceries, and sorcery spells matching their chosen sorcery type. Make sure to review the Magic Guide to get an understanding of the magic system. Be sure you apply your level 1 bonuses from your subclass and pick 1 trait from your subclass to apply to your character.
 </p>
 
 <p>
@@ -229,9 +229,8 @@ Spells are cast using WIS + PROF
 <li><span class="underline">Initial Health</span>: Roll a 1d6 and add it to your base HP. This is your Hit Die (HD). You will add the amount your roll to your base health every time your level up.</li>
 <li><span class="underline">Spell Save DC</span>: 8 + WIS + PROF</li>
 </ul>
-
-<div id="outline-container-org1fb2f1e" class="outline-2">
-<h2 id="org1fb2f1e"><span class="section-number-2">1.</span> Proficiencies</h2>
+<div id="outline-container-orgd7fe556" class="outline-2">
+<h2 id="orgd7fe556"><span class="section-number-2">1.</span> Proficiencies</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -272,29 +271,29 @@ Spells are cast using WIS + PROF
 </table>
 </div>
 </div>
-<div id="outline-container-org5f1ae17" class="outline-2">
-<h2 id="org5f1ae17"><span class="section-number-2">2.</span> Level-up guide</h2>
+<div id="outline-container-orgcd6ab6c" class="outline-2">
+<h2 id="orgcd6ab6c"><span class="section-number-2">2.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>Pick one generic spell, one sorcerer spell, and one sorcery trait (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
 <li>Add one generic spell and one sorcerer spell to your spell list.</li>
-<li>Add one sorcery. Add one level one spell slot (Total: 4, 0, 0, 0).</li>
-<li>Gain Recast Recharge.</li>
-<li>You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0).</li>
+<li>Gain <span class="underline"><b>Recast Recharge</b></span>. Add one level one spell slot (Total: 4, 0, 0, 0).</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0). Choose an additional sorcery trait to apply to your character</li>
 <li>Add one generic spell, and one sorcerer spell.</li>
 <li>Add one sorcery, and one level two spell slot (Total: 4, 2).</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>Add +1 to INT and +1 to WIS.</li>
-<li>Add +1 of Any.</li>
 <li>Become an Archsorcerer: Evolve, Mutate, or Ascend.</li>
 <li>You are now able to learn level three spells. Add two generic spells, one level three spell slot, and 1d6 health. (Total: 4, 2, 1, 0).</li>
-<li>Add one sorcerer spell and 1d6 health.</li>
-<li>Add one sorcery.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>Add +1 of Any, 1d6 health, and one level two spell slot. (Total: 4, 3, 1, 0)</li>
 <li>Add one sorcerer trait, one level three spell slot, and 1d6 health (Total: 4, 3, 2, 0).</li>
 <li>You are now able to learn level four spells. Add one level four spell slot. (Total: 4, 3, 2, 1).</li>
-<li>Add one generic spell and 1d6 health.</li>
-<li>Add one sorcerer spell and 1d6 health.</li>
-<li>Add one sorcery and 1d6 health. Become a Transcendent Archsorcerer.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
+<li>Add one generic spell and add one sorcerer spell.</li>
+<li>Add one sorcery. Become a Transcendent Archsorcerer.</li>
+<li>Increase one ability score of your choosing by +2, or two ability scores by +1</li>
 <li>Multiclass</li>
 </ol>
 </div>
@@ -303,7 +302,7 @@ Spells are cast using WIS + PROF
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-15 Sat 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2024-02-23 Fri 12:47</p>
+<p class="date">Created: 2024-03-01 Fri 16:12</p>
 </div>
 </body>
 </html>
