--- a/classes/subclasses/radiant_wizard.html
+++ b/classes/subclasses/radiant_wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-08 Fri 14:06 -->
+<!-- 2024-03-01 Fri 15:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Radiant Wizard</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org21ea7d7">1. Wizard Traits</a></li>
-<li><a href="#org50a1ab1">2. Level 1</a></li>
-<li><a href="#orgd808659">3. Level 2 (5+)</a></li>
-<li><a href="#org33a97dc">4. Level 3 (11+)</a></li>
-<li><a href="#org42158e8">5. Level 4 (15+)</a></li>
+<li><a href="#orgdaeb1de">1. Wizard Traits</a></li>
+<li><a href="#orgedf2630">2. Level 1</a></li>
+<li><a href="#org39f8c3b">3. Level 2 (5+)</a></li>
+<li><a href="#orga406e95">4. Level 3 (11+)</a></li>
+<li><a href="#org3b639c6">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -219,9 +219,8 @@
 <p>
 Radiant Wizards operate in the middle ground between Wizard and Bard, occasionally acting as a healer for the rest of the party. However, they have the capability to deal extreme amounts of damage under specific conditions. They can grant buffs and debuffs to allies and enemies, but are limited in their abilities against Good NPCs.
 </p>
-
-<div id="outline-container-org21ea7d7" class="outline-2">
-<h2 id="org21ea7d7"><span class="section-number-2">1.</span> Wizard Traits</h2>
+<div id="outline-container-orgdaeb1de" class="outline-2">
+<h2 id="orgdaeb1de"><span class="section-number-2">1.</span> Wizard Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><i>Ass Kisser</i></span>: Regardless of your actions in the campaign, you will be considered Good creature by everyone you encounter, including the gods. Good for you.</li>
@@ -229,8 +228,8 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 </ul>
 </div>
 </div>
-<div id="outline-container-org50a1ab1" class="outline-2">
-<h2 id="org50a1ab1"><span class="section-number-2">2.</span> Level 1</h2>
+<div id="outline-container-orgedf2630" class="outline-2">
+<h2 id="orgedf2630"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Bless</b></span>: Grant an ally the Blessed buff and heal them for 1d8 health. This cannot revive them from the dead.</li>
@@ -239,8 +238,8 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd808659" class="outline-2">
-<h2 id="orgd808659"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
+<div id="outline-container-org39f8c3b" class="outline-2">
+<h2 id="org39f8c3b"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Grace</b></span>: Heal 2 allies below half health to half health, or revive one unconscious ally to 5 health. You do not need to roll to hit for this spell.</li>
@@ -249,17 +248,17 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 </ul>
 </div>
 </div>
-<div id="outline-container-org33a97dc" class="outline-2">
-<h2 id="org33a97dc"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
+<div id="outline-container-orga406e95" class="outline-2">
+<h2 id="orga406e95"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
-<li><span class="underline"><b>Summon Angel</b></span>: Summon an Angel to fight in combat for you for five turns. The Angel had 50HP, 15 AC, and deals 3d8 damage on hit. The Angel will only attack Evil or Neutral enemies.</li>
-<li><span class="underline"><b>Shackles</b></span>: Bind a target to the ground with blessed shackles. The target must make a CON saving throw to escape the shackles. THe target takes 2d6 radiant damage from the shackles until they escape.</li>
+<li><span class="underline"><b>Summon Angel</b></span>: Summon an Angel to fight in combat for you for five turns. The Angel has 50HP, 15 AC, and deals 3d8 damage on hit. The Angel will only attack Evil or Neutral enemies.</li>
+<li><span class="underline"><b>Shackles</b></span>: Bind a target to the ground with blessed shackles. The target must make a consitution saving throw to escape the shackles. The target takes 2d6 radiant damage from the shackles until they escape.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org42158e8" class="outline-2">
-<h2 id="org42158e8"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
+<div id="outline-container-org3b639c6" class="outline-2">
+<h2 id="org3b639c6"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Beatification</b></span>: Send a creature of your choosing to Heaven. They return from Heaven fully healed, fully rested, and with a variety of buffs. No roll is necessary to perform this spell. <i>This spell has two charges, and must be recharged with a University Ritual</i>.</li>
@@ -271,7 +270,7 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-08 Fri 14:06</p>
+<p class="date">Created: 2024-03-01 Fri 15:48</p>
 </div>
 </body>
 </html>
